k8s/admin_server_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  admin-server
  labels:
    app:  admin-server
spec:
  selector:
    matchLabels:
      app: admin-server
  replicas: 1
  template:
    metadata:
      labels:
        app:  admin-server
    spec:
      containers:
      - name:  admin-server
        image:  "654421006949.dkr.ecr.us-east-1.amazonaws.com/microservice-project:admin-server-b5"
        ports:
        - containerPort:  9090
      imagePullSecrets:
      - name: regcred
