k8s/api_gateway_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  api-gateway
  labels:
    app:  api-gateway
spec:
  selector:
    matchLabels:
      app: api-gateway
  replicas: 1
  template:
    metadata:
      labels:
        app:  api-gateway
    spec:
      containers:
      - name:  api-gateway
        image:  "654421006949.dkr.ecr.us-east-1.amazonaws.com/microservice-project:api-gateway-b5"
        ports:
        - containerPort:  8080
      imagePullSecrets:
      - name: regcred
