k8s/config_server_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  config-server
  labels:
    app:  config-server
spec:
  selector:
    matchLabels:
      app: config-server
  replicas: 1
  template:
    metadata:
      labels:
        app:  config-server
    spec:
      containers:
      - name:  config-server
        image:  "654421006949.dkr.ecr.us-east-1.amazonaws.com/microservice-project:config-server-b5"
        ports:
        - containerPort:  8888
      imagePullSecrets:
      - name: regcred
