k8s/customers_service_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  customers-service
  labels:
    app:  customers-service
spec:
  selector:
    matchLabels:
      app: customers-service
  replicas: 1
  template:
    metadata:
      labels:
        app:  customers-service
    spec:
      containers:
      - name:  customers-service
        image:  "654421006949.dkr.ecr.us-east-1.amazonaws.com/microservice-project:customers-server-b5"
        ports:
        - containerPort:  8081
      imagePullSecrets:
      - name: regcred
