k8s/discovery_server_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  discovery-server
  labels:
    app:  discovery-server
spec:
  selector:
    matchLabels:
      app: discovery-server
  replicas: 1
  template:
    metadata:
      labels:
        app:  discovery-server
    spec:
      containers:
      - name:  discovery-server
        image:  "654421006949.dkr.ecr.us-east-1.amazonaws.com/microservice-project:discovery-server-b5"
        ports:
        - containerPort:  8761
      imagePullSecrets:
      - name: regcred
