k8s/grafana_server_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  grafana-server
  labels:
    app:  grafana-server
spec:
  selector:
    matchLabels:
      app: grafana-server
  replicas: 1
  template:
    metadata:
      labels:
        app:  grafana-server
    spec:
      containers:
      - name:  grafana-server
        image:  "654421006949.dkr.ecr.us-east-1.amazonaws.com/microservice-project:grafana-server-b4"
        ports:
        - containerPort:  3000
      imagePullSecrets:
      - name: regcred
