k8s/hystrix_server_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  hystrix-server
  labels:
    app:  hystrix-server
spec:
  selector:
    matchLabels:
      app: hystrix-server
  replicas: 1
  template:
    metadata:
      labels:
        app:  hystrix-server
    spec:
      containers:
      - name:  hystrix-server
        image:  "654421006949.dkr.ecr.us-east-1.amazonaws.com/microservice-project:hystrix-dashboard-b5"
        ports:
        - containerPort:  7979
      imagePullSecrets:
      - name: regcred
