k8s/mysql_server_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  mysql-server
  labels:
    app:  mysql-server
spec:
  selector:
    matchLabels:
      app: mysql-server
  replicas: 1
  template:
    metadata:
      labels:
        app:  mysql-server
    spec:
      containers:
      - name:  mysql-server
        image:  mysql:5.7.8
        ports:
        - containerPort:  3306
