k8s/prometheus_server_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  prometheuse-server
  labels:
    app:  prometheuse-server
spec:
  selector:
    matchLabels:
      app: prometheuse-server
  replicas: 1
  template:
    metadata:
      labels:
        app:  prometheuse-server
    spec:
      containers:
      - name:  prometheuse-server
        image:  "654421006949.dkr.ecr.us-east-1.amazonaws.com/microservice-project:prometheus-server-b4"
        ports:
        - containerPort:  9090
      imagePullSecrets:
      - name: regcred
