k8s/tracing_server_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  tracing-server
  labels:
    app:  tracing-server
spec:
  selector:
    matchLabels:
      app: tracing-server
  replicas: 1
  template:
    metadata:
      labels:
        app:  tracing-server
    spec:
      containers:
      - name:  tracing-server
        image:  openzipkin/zipkin
        ports:
        - containerPort:  9411
