k8s/vets_service_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  vets-service
  labels:
    app:  vets-service
spec:
  selector:
    matchLabels:
      app: vets-service
  replicas: 1
  template:
    metadata:
      labels:
        app:  vets-service
    spec:
      containers:
      - name:  vets-service
        image:  "654421006949.dkr.ecr.us-east-1.amazonaws.com/microservice-project:vets-service-b5"
        ports:
        - containerPort:  8083
      imagePullSecrets:
      - name: regcred
