k8s/visits_service_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  visits-service
  labels:
    app:  visits-service
spec:
  selector:
    matchLabels:
      app: visits-service
  replicas: 1
  template:
    metadata:
      labels:
        app:  visits-service
    spec:
      containers:
      - name:  visits-service
        image:  "654421006949.dkr.ecr.us-east-1.amazonaws.com/microservice-project:visits-service-b5"
        ports:
        - containerPort:  8082
      imagePullSecrets:
      - name: regcred
