k8s/hystrix_server_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hystrix-server
spec:
  selector:
    app: hystrix-server
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 7979
    targetPort: 7979
